# fastapi-template

./: README.md  compose-container.yml  compose.debug.yml  compose.yml
.devcontainer/: devcontainer.json
backend/: .env  Dockerfile  Dockerfile.Container  Dockerfile.debug  README.md  entrypoint.debug.sh  main.py  makefile  pyproject.toml  settings.py  uvicorn_config.py
