[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    "Bhasker <saibhaskerraju@outlook.com>"
]

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "~0.120.0"
uvicorn ="~0.38.0"
ruff = "^0.14.2"

[tool.poetry.group.dev.dependencies]
debugpy = "~1.8.17"
[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []